--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>asm</module>
         <module>feature</module>
         <module>springmvc</module>
+        <module>ear-demo-package</module>
         <!--gmssl 工程需要特殊JDK编译，这里暂且不编译-->
         <!--<module>gmssl</module>-->
     </modules>
