ear demo for package with app client module and web module, fix web module bundle file name.

--- a/ear-demo-package/pom.xml
+++ b/ear-demo-package/pom.xml
@@ -43,7 +43,7 @@
                         <webModule>
                             <groupId>com.jasonfitch.test</groupId>
                             <artifactId>springmvc</artifactId>
-                            <bundleFileName>springmvc.jar</bundleFileName>
+                            <bundleFileName>springmvc.war</bundleFileName>
                         </webModule>
 
                         <appClientModule>
