--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -130,6 +130,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.tuckey</groupId>
+            <artifactId>urlrewritefilter</artifactId>
+            <version>${urlrewritefilter.version}</version>
+        </dependency>
+
     </dependencies>
 
 
