--- a/springmvc/web/WEB-INF/web.xml
+++ b/springmvc/web/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         
         <init-param>
             <param-name>logLevel</param-name>
-            <param-value>TRACE</param-value>
+            <param-value>INFO</param-value>
         </init-param>
     </filter>
 
