--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -213,6 +213,11 @@
             <version>${caucho.hessian.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
