ant test: iterator a specific directory and install jar file to local repository, fixed spell problem.

--- a/internal-repo/pom.xml
+++ b/internal-repo/pom.xml
@@ -86,7 +86,7 @@
                             <excludeTransitive>true</excludeTransitive>
                             <stripVersion>false</stripVersion>
                             <overWriteIfNewer>true</overWriteIfNewer>
-                            <excludeGroupIds>ant</excludeGroupIds>
+                            <excludeGroupIds>ant-contrib</excludeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
