ant test: iterator a specific directory and install jar file to local repository, fixed mvn recursion exec problem under linux.

--- a/internal-repo/build.properties
+++ b/internal-repo/build.properties
@@ -1,8 +1,10 @@
 #internal conf
-parallel.enabled=true
+parallel.enabled=false
 parallel.thread.count=3
 
 mvn.executable=mvn
 mvn.goal=install:install-file
 mvn.group.prefix=com.jasonfitch.test.internal
 mvn.packaging=jar
+
+includes.file=${basedir}/includes.properties
