--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,9 @@
         <!-- serialize -->
         <caucho.hessian.version>4.0.65</caucho.hessian.version>
 
+        <!-- oceanbase-client -->
+        <oceanbase-client.version>1.1.10</oceanbase-client.version>
+
         <!-- junit -->
         <org.junit.junit-bom.version>5.7.1</org.junit.junit-bom.version>
 
