--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springmvc</module>
         <module>ear-demo-package</module>
         <module>ear-demo-app</module>
+        <module>ear-demo-app-descriptor</module>
         <module>javaagent</module>
         <module>internal-repo</module>
         <!--gmssl 工程需要特殊JDK编译，这里暂且不编译-->
