--- a/ear-demo-app-descriptor/stateful_remove_descriptor_web/web/WEB-INF/web.xml
+++ b/ear-demo-app-descriptor/stateful_remove_descriptor_web/web/WEB-INF/web.xml
@@ -29,14 +29,20 @@
         <ejb-ref-name>ejb-local-ref-for-removeBean-local</ejb-ref-name>
         <ejb-ref-type>Session</ejb-ref-type>
         <local>com.sun.ts.tests.ejb30.bb.session.stateful.remove.common.RemoveLocalIF</local>
-        <ejb-link>../stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>
+        <!--  tomee style -->
+<!--        <ejb-link>../stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>-->
+        <!--  glassfish style -->
+        <ejb-link>stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>
     </ejb-local-ref>
 
     <ejb-local-ref>
         <ejb-ref-name>ejb-local-ref-for-removeBean-local-home</ejb-ref-name>
         <ejb-ref-type>Session</ejb-ref-type>
         <local-home>com.sun.ts.tests.ejb30.common.migration.twothree.TwoLocalHome</local-home>
-        <ejb-link>../stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>
+        <!--  tomee style -->
+<!--        <ejb-link>../stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>-->
+        <!--  glassfish style -->
+        <ejb-link>stateful_remove_descriptor_ejb.jar#RemoveBean</ejb-link>
     </ejb-local-ref>
 
 </web-app>
