ear-demo-app-descriptor: fix the dependency scope of javax.ejb-api to provided, to avoid packaging the ejb api jar file.

--- a/ear-demo-app-descriptor/stateful_remove_descriptor_client/pom.xml
+++ b/ear-demo-app-descriptor/stateful_remove_descriptor_client/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>javax.ejb</groupId>
             <artifactId>javax.ejb-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
