--- a/ear-demo-app-descriptor/stateful_remove_descriptor_web/pom.xml
+++ b/ear-demo-app-descriptor/stateful_remove_descriptor_web/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>javax.ejb</groupId>
             <artifactId>javax.ejb-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
