--- a/ear-demo-app-descriptor/listener-one/pom.xml
+++ b/ear-demo-app-descriptor/listener-one/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>listener-one</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.glassfish.main.common</groupId>
+            <artifactId>glassfish-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
