--- a/ear-demo-app-descriptor/pom.xml
+++ b/ear-demo-app-descriptor/pom.xml
@@ -30,6 +30,14 @@
                 <version>3.2</version>
             </dependency>
 
+            <!--  管理子模块依赖的作用域和版本  -->
+            <dependency>
+                <groupId>org.glassfish.main.common</groupId>
+                <artifactId>glassfish-api</artifactId>
+                <version>6.0.0-SNAPSHOT</version>
+                <scope>provided</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
