repository: sync submodule MiscellaneousTest-asm path and commit.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>asm</module>
+        <module>MiscellaneousTest-asm</module>
         <module>feature</module>
         <module>springmvc</module>
         <module>ear-demo-package</module>
