--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <httpclient.version>4.2.1</httpclient.version>
 
         <gson.version>2.8.5</gson.version>
+        <jackson.databind.version>2.12.3</jackson.databind.version>
 
         <commons-el.version>1.0</commons-el.version>
         <jstl-api.version>1.2</jstl-api.version>
