--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
         <gson.version>2.8.5</gson.version>
         <jackson.databind.version>2.12.3</jackson.databind.version>
 
+        <hibernate.validator.jakarta.version>6.2.3.Final</hibernate.validator.jakarta.version>
+        <hibernate.validator.version>5.3.6.Final</hibernate.validator.version>
+
         <commons-el.version>1.0</commons-el.version>
         <jstl-api.version>1.2</jstl-api.version>
 
