--- a/configuration/idea/idea.properties
+++ b/configuration/idea/idea.properties
@@ -1,5 +1,15 @@
 # custom IntelliJ IDEA properties (expand/override 'bin\idea.properties')
 
+# //JF bin\idea.properties 文件中提到的 ${idea.home.path} 是 idea 内部预定义的 macro ，用来表示 idea 的安装位置，我们不可以修改
+# 因为我们要自定义 idea-work 目录到非 relative to IDE installation home 所以这里我们使用独立的 ${idea.work.path}。
+# help menu of idea gui 的 edit custom properties/vm options 子菜单的配置便持久化到了${idea.config.path} 目录下
+# Use ${idea.home.path} macro to specify location relative to IDE installation home.
+# Use ${xxx} where xxx is any Java property (including defined in previous lines of this file) to refer to its value.
+# Note for Windows users: please make sure you're using forward slashes: C:/dir1/dir2.
 idea.work.path=E:/Temporary/idea-work
 idea.config.path=${idea.work.path}/.IdeaIC/config
 idea.system.path=${idea.work.path}/.IdeaIC/system
+
+# JF 另外直接使用 "C:\ideaIC-2022.1.2.win\bin\idea64.exe" 启动 idea 其是不会执行 "C:\ideaIC-2022.1.2.win\bin\idea.bat" 的
+# 所以如果我们在 idea.bat 中配置了什么数据，或者其预先会读取的属性，是不会生效的，比如其内部会读取 IDEA_JDK 系统环境变量用来启动 idea 。
+# 因此为了更好的启动 idea 我们应该使用 idea.bat 文件来启动。
