--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -182,6 +182,20 @@
             <version>${hibernate.validator.version}</version>
         </dependency>
 
+        <!-- quartz implement -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>${quartz.version}</version>
+        </dependency>
+
+        <!-- spring integration quartz with org.springframework.scheduling.quartz.SchedulerFactoryBean -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
     </dependencies>
 
 
