springmvc: test spring job schedule, support config FixedDelayTask with @PropertySource and @Value.

--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -211,6 +211,7 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>**/spring-*.xml</include>
+                    <include>**/spring-*.properties</include>
                 </includes>
             </resource>
 
