springmvc: test spring job schedule, test throw exception during schedule running.

--- a/springmvc/src/main/resources/spring-schedule.properties
+++ b/springmvc/src/main/resources/spring-schedule.properties
@@ -1,10 +1,15 @@
 # scheduler config
-schedule.scheduler.max.pool.size=32
-schedule.scheduler.thread.prefix=task-scheduler-
+schedule.scheduler.max.pool.size=16
+schedule.scheduler.thread.prefix=primary-task-scheduler-
 schedule.scheduler.auto.update.task=true
 schedule.scheduler.auto.schedule.task=true
 # management default  config
-schedule.default.initial.update.delay=1000
-schedule.default.fixed.update.delay=1000
-schedule.default.initial.schedule.delay=1000
-schedule.default.fixed.schedule.delay=1000
+schedule.default.initial.update.delay=5000
+schedule.default.fixed.update.delay=5000
+schedule.default.initial.schedule.delay=5000
+schedule.default.fixed.schedule.delay=5000
+# management business config
+schedule.business.initial.update.delay=1000
+schedule.business.fixed.update.delay=1000
+schedule.business.initial.schedule.delay=1000
+schedule.business.fixed.schedule.delay=1000
