springmvc: test spring job schedule, support Future#cancel mayInterruptIfRunning with thread interrupt signal.

--- a/springmvc/src/main/resources/spring-schedule.properties
+++ b/springmvc/src/main/resources/spring-schedule.properties
@@ -13,3 +13,13 @@ schedule.business.initial.update.delay=1000
 schedule.business.fixed.update.delay=1000
 schedule.business.initial.schedule.delay=1000
 schedule.business.fixed.schedule.delay=1000
+# task default config
+schedule.default.task.period=5000
+schedule.default.task.may-interrupt-if-running=false
+schedule.default.task.suspend.on-error=false
+schedule.default.task.suspend.immediate=false
+# task business config
+schedule.business.task.period=1000
+schedule.business.task.may-interrupt-if-running=true
+schedule.business.task.suspend.on-error=true
+schedule.business.task.suspend.immediate=true
