--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,8 @@
 
         <!--springmvc-->
         <spring.version>5.1.7.RELEASE</spring.version>
+        <spring.security.version>5.1.7.RELEASE</spring.security.version>
+        <hamcrest.version>2.2</hamcrest.version>
         <!--<spring.version>3.1.0.RELEASE</spring.version>-->
         <spymemcached.version>2.12.3</spymemcached.version>
         <msm.version>2.1.1</msm.version>
