--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -223,6 +223,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>${spring.security.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
