feature: java.lang.ProcessBuilder test, add commons-io with ReversedLinesFileReader.

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -27,6 +27,8 @@
         <javassist.version>3.25.0-GA</javassist.version>
         <!--jdk6-->
         <!--<javassist.version>3.23.2-GA</javassist.version>-->
+
+        <commons-io.version>2.11.0</commons-io.version>
     </properties>
 
     <dependencies>
@@ -236,6 +238,13 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
 
     </dependencies>
