springmvc: test spring job schedule, schedule task with @Scheduled and shutdown ThreadPoolTaskScheduler with await time correctly.

--- a/springmvc/src/main/resources/spring-schedule.properties
+++ b/springmvc/src/main/resources/spring-schedule.properties
@@ -1,6 +1,7 @@
 # scheduler config
 schedule.scheduler.max.pool.size=16
 schedule.scheduler.thread.prefix=primary-task-scheduler-
+schedule.scheduler.await.termination.seconds=32
 schedule.scheduler.auto.update.task=true
 schedule.scheduler.auto.schedule.task=true
 # management default  config
