springmvc: test spring job schedule, default disable scheduler to auto schedule and auto update task.

--- a/springmvc/src/main/resources/spring-schedule.properties
+++ b/springmvc/src/main/resources/spring-schedule.properties
@@ -2,8 +2,8 @@
 schedule.scheduler.max.pool.size=16
 schedule.scheduler.thread.prefix=primary-task-scheduler-
 schedule.scheduler.await.termination.seconds=32
-schedule.scheduler.auto.update.task=true
-schedule.scheduler.auto.schedule.task=true
+schedule.scheduler.auto.update.task=false
+schedule.scheduler.auto.schedule.task=false
 # management default  config
 schedule.default.initial.update.delay=5000
 schedule.default.fixed.update.delay=5000
